# syntropy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  pr.yml  release.yml
docs/: available-plugins.md  config-reference.md  plugin-api-reference-section-advanced.md  plugin-api-reference-section-api-functions.md  plugin-api-reference-section-data-structures.md  plugin-api-reference-section-examples.md  plugin-api-reference-section-item-sources.md  plugin-api-reference-section-tasks.md  plugin-api-reference.md  plugins.md  recipes.md
scaffold_templates/: .luarc.json  plugin.lua  syntropy.lua
screenshots/: demo.tape
src/: lib.rs  main.rs  signal.rs
src/app/: mod.rs  run.rs
src/cli/: args.rs  completions.rs  execute.rs  init.rs  list.rs  mod.rs  plugins.rs  validate.rs
src/configs/: config.rs  key_bindings.rs  mod.rs  paths.rs  plugin_declaration.rs
src/execution/: exit_code.rs  handle.rs  lua.rs  mod.rs  runner.rs
src/lua/: bridge.rs  mod.rs  runtime.rs  stdlib.rs
src/plugins/: git_ops.rs  loader.rs  mod.rs  module_path_builder.rs  plugin.rs  plugin_candidate.rs  plugin_source.rs
src/tui/: dispatcher.rs  events.rs  external_tui.rs  fuzzy_searcher.rs  mod.rs  strings.rs  tui_app.rs
tests/: unit_registry_cleanup_guard.rs
tests/common/: mod.rs
tests/integration/: case_sensitivity_test.rs  circular_dependency_test.rs  cli_execute_test.rs  cli_init_test.rs  cli_list_test.rs  colors_loading_test.rs  config_validation_test.rs  exit_code_integration_test.rs  lua_expand_path_test.rs  lua_registry_cleanup_test.rs  lua_runtime_error_test.rs  malformed_module_test.rs  mod.rs  module_edge_cases_test.rs  (+18 more)
(+55 files in other folders)
